# swagger.yaml
@@ -570,6 +570,20 @@ paths:
                 newPassword:
                   description: New password
                   type: string
+                username:
+                  description: New username
+                  type: string
+                platforms:
+                  description: List of platforms and the logged user's usernames
+                  type: array
+                  items:
+                    type: object
+                    properties:
+                      username:
+                        type: string
+                        description: The user's username
+                      _id:
+                        $ref: '#/components/schemas/MongoID'
       responses:
         "400":
           description: "The input data was wrongly formatted"
@@ -596,7 +610,7 @@ paths:
               schema:
                 $ref: "#/components/schemas/ErrorMessageResponse"
         "200":
-          description: "Password updated"
+          description: "User updated"
 
   /tournaments:
     post:
